--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
         "@emotion/react": "11.10.4",
         "@emotion/styled": "11.10.4",
         "@mui/icons-material": "5.10.9",
-        "@mui/joy": "5.0.0-alpha.50",
+        "@mui/joy": "5.0.0-alpha.53",
         "ethers": "5.7.1",
-        "framer-motion": "^7.6.1",
+        "framer-motion": "7.6.1",
         "immer": "9.0.15",
         "next": "12.3.1",
         "react": "18.2.0",
