Display user's listings + update and buy listings
-> Still waiting on indexing with The Graph to be able to display and update live listing data

+ Add `listing` model with dummy listings

+ Add `react-query` library to hydrate metadata for listings

+ Add `react-hook-form` library for controlling forms

+ Reorganize components into `atoms`, `widgets`, and `layouts`

+ Add `ListingCard` component to display listings

+ Add `CircularLoader` component that automatically centers itself within its parent

+ Add `ErrorMessage` component to display error messages

+ Animate entry and exit of notifications from `useNotify`

+ Update theme z-indexed to account for difference in elevation between drawer backdrops and modal backdrops

+ Update eslint rules to allow css properties starting with `&:`

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,14 @@
                 "format": null
             },
             {
+                "selector": ["objectLiteralProperty"],
+                "format": null,
+                "filter": {
+                    "regex": "^&:.*",
+                    "match": true
+                }
+            },
+            {
                 "selector": ["function"],
                 "format": ["strictCamelCase", "StrictPascalCase"]
             },
