--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "dependencies": {
         "@emotion/react": "11.10.4",
         "@emotion/styled": "11.10.4",
+        "@hookform/resolvers": "2.9.10",
         "@mui/icons-material": "5.10.9",
         "@mui/joy": "5.0.0-alpha.53",
+        "@tanstack/react-query": "4.14.6",
+        "axios": "1.1.3",
         "ethers": "5.7.1",
         "framer-motion": "7.6.1",
         "immer": "9.0.15",
         "next": "12.3.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "7.39.4",
         "react-use": "17.4.0",
-        "wagmi": "0.7.12",
+        "wagmi": "0.8.3",
         "zod": "3.19.1"
     },
     "devDependencies": {
