--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "@emotion/react": "11.10.4",
         "@emotion/styled": "11.10.4",
         "@hookform/resolvers": "2.9.10",
-        "@mui/icons-material": "5.10.9",
-        "@mui/joy": "5.0.0-alpha.53",
+        "@mui/icons-material": "5.10.14",
+        "@mui/joy": "5.0.0-alpha.54",
         "@tanstack/react-query": "4.14.6",
         "axios": "1.1.3",
         "ethers": "5.7.1",
@@ -25,6 +25,7 @@
         "react-dom": "18.2.0",
         "react-hook-form": "7.39.4",
         "react-use": "17.4.0",
+        "validator": "13.7.0",
         "wagmi": "0.8.3",
         "zod": "3.19.1"
     },
@@ -32,6 +33,7 @@
         "@types/node": "18.8.2",
         "@types/react": "18.0.21",
         "@types/react-dom": "18.0.6",
+        "@types/validator": "13.7.10",
         "@typescript-eslint/eslint-plugin": "5.40.0",
         "eslint": "8.25.0",
         "eslint-config-next": "12.3.1",
