--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "build": "next build",
         "export": "next export",
         "start": "next start",
-        "lint": "eslint pages components shared"
+        "lint": "eslint pages components shared",
+        "typecheck": "tsc --noEmit",
+        "staticcheck": "npm run lint && npm run typecheck"
     },
     "dependencies": {
         "@emotion/react": "11.10.4",
@@ -17,7 +19,7 @@
         "@mui/joy": "5.0.0-alpha.54",
         "@tanstack/react-query": "4.14.6",
         "axios": "1.1.3",
-        "ethers": "5.7.1",
+        "ethers": "5.7.2",
         "framer-motion": "7.6.1",
         "immer": "9.0.15",
         "next": "12.3.1",
@@ -26,7 +28,7 @@
         "react-hook-form": "7.39.4",
         "react-use": "17.4.0",
         "validator": "13.7.0",
-        "wagmi": "0.8.3",
+        "wagmi": "0.8.5",
         "zod": "3.19.1"
     },
     "devDependencies": {
