--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     },
     "env": {
         "node": true,
-        "es2020": true
+        "es2020": true,
+        "jest/globals": true
     },
     "plugins": ["@typescript-eslint"],
     "extends": [
@@ -14,6 +15,7 @@
         "plugin:@typescript-eslint/recommended",
         "plugin:@typescript-eslint/recommended-requiring-type-checking",
         "plugin:@typescript-eslint/strict",
+        "plugin:jest/recommended",
         "next/core-web-vitals"
     ],
     "rules": {
@@ -66,6 +68,7 @@
                 "selector": ["typeLike", "enum", "enumMember"],
                 "format": ["StrictPascalCase"]
             }
-        ]
+        ],
+        "jest/valid-title": ["error", { "ignoreTypeOfDescribeName": true }]
     }
 }
