--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "start": "next start",
         "lint": "eslint pages components shared",
         "typecheck": "tsc --noEmit",
-        "staticcheck": "npm run lint && npm run typecheck"
+        "staticcheck": "npm run lint && npm run typecheck",
+        "test": "jest"
     },
     "dependencies": {
         "@emotion/react": "11.10.4",
@@ -32,6 +33,8 @@
         "zod": "3.19.1"
     },
     "devDependencies": {
+        "@testing-library/react": "13.4.0",
+        "@types/jest": "29.2.3",
         "@types/node": "18.8.2",
         "@types/react": "18.0.21",
         "@types/react-dom": "18.0.6",
@@ -39,7 +42,12 @@
         "@typescript-eslint/eslint-plugin": "5.40.0",
         "eslint": "8.25.0",
         "eslint-config-next": "12.3.1",
+        "eslint-plugin-jest": "27.1.5",
+        "jest": "29.3.1",
+        "jest-environment-jsdom": "29.3.1",
         "prettier": "2.7.1",
+        "ts-jest": "29.0.3",
+        "ts-node": "10.9.1",
         "typescript": "4.8.4"
     }
 }
