--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "introspect:staging": "SUBGRAPH_API_ENDPOINT=$(grep SUBGRAPH_API_ENDPOINT .env.development | cut -d '=' -f2) && mkdir -p ./subgraph && graphql-inspector introspect $SUBGRAPH_API_ENDPOINT --write ./subgraph/schema.json",
+        "generate-types": "graphql-codegen",
+        "prepare:staging": "npm run introspect:staging && npm run generate-types",
+        "watch:staging": "npm run prepare:staging -- -- --watch",
+        "develop": "npm run watch:staging & next dev",
         "build": "next build",
         "export": "next export",
         "start": "next start",
-        "lint": "eslint pages components shared",
+        "lint": "eslint pages source",
         "typecheck": "tsc --noEmit",
         "staticcheck": "npm run lint && npm run typecheck",
-        "test": "jest"
+        "test": "jest",
+        "check": "npm run staticcheck && npm run test"
     },
     "dependencies": {
+        "@apollo/client": "3.7.1",
         "@emotion/react": "11.10.4",
         "@emotion/styled": "11.10.4",
         "@hookform/resolvers": "2.9.10",
@@ -22,6 +28,7 @@
         "axios": "1.1.3",
         "ethers": "5.7.2",
         "framer-motion": "7.6.1",
+        "graphql": "16.6.0",
         "immer": "9.0.15",
         "next": "12.3.1",
         "react": "18.2.0",
@@ -29,10 +36,15 @@
         "react-hook-form": "7.39.4",
         "react-use": "17.4.0",
         "validator": "13.7.0",
-        "wagmi": "0.8.5",
+        "wagmi": "0.8.7",
         "zod": "3.19.1"
     },
     "devDependencies": {
+        "@graphql-codegen/cli": "2.14.1",
+        "@graphql-codegen/client-preset": "1.1.5",
+        "@graphql-codegen/introspection": "2.2.1",
+        "@graphql-eslint/eslint-plugin": "3.13.1",
+        "@graphql-inspector/cli": "3.4.0",
         "@testing-library/react": "13.4.0",
         "@types/jest": "29.2.3",
         "@types/node": "18.8.2",
@@ -43,6 +55,11 @@
         "eslint": "8.25.0",
         "eslint-config-next": "12.3.1",
         "eslint-plugin-jest": "27.1.5",
+        "eslint-plugin-promise": "6.1.1",
+        "eslint-plugin-react": "7.31.11",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "eslint-plugin-testing-library": "5.9.1",
+        "graphql-config": "4.3.6",
         "jest": "29.3.1",
         "jest-environment-jsdom": "29.3.1",
         "prettier": "2.7.1",
