Convert to Next.js 13 app folder structure + use absolute imports
-> Move contracts and subgraph folder under source folder

-> Remove the `shared` module and move the `hooks`, `utilities`, `constants`, and `contexts` modules to the top level source folder

-> Use `nifty/` namespace for absolute imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "es2020": true,
         "jest/globals": true
     },
+    "ignorePatterns": ["source/contracts", "source/subgraph"],
     "plugins": [
         "@typescript-eslint",
         "react",
