--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "introspect:staging": "SUBGRAPH_API_ENDPOINT=$(grep SUBGRAPH_API_ENDPOINT .env.development | cut -d '=' -f2) && mkdir -p ./subgraph && graphql-inspector introspect $SUBGRAPH_API_ENDPOINT --write ./subgraph/schema.json",
+        "introspect:staging": "SUBGRAPH_API_ENDPOINT=$(grep SUBGRAPH_API_ENDPOINT .env.development | cut -d '=' -f2) && mkdir -p ./source/subgraph && graphql-inspector introspect $SUBGRAPH_API_ENDPOINT --write ./source/subgraph/schema.json",
         "generate-types": "graphql-codegen",
         "prepare:staging": "npm run introspect:staging && npm run generate-types",
         "watch:staging": "npm run prepare:staging -- -- --watch",
@@ -11,7 +11,7 @@
         "build": "next build",
         "export": "next export",
         "start": "next start",
-        "lint": "eslint pages source",
+        "lint": "eslint app source",
         "typecheck": "tsc --noEmit",
         "staticcheck": "npm run lint && npm run typecheck",
         "test": "jest",
@@ -21,6 +21,7 @@
         "@apollo/client": "3.7.1",
         "@emotion/react": "11.10.4",
         "@emotion/styled": "11.10.4",
+        "@fontsource/public-sans": "^4.5.11",
         "@hookform/resolvers": "2.9.10",
         "@mui/icons-material": "5.10.14",
         "@mui/joy": "5.0.0-alpha.54",
@@ -30,7 +31,7 @@
         "framer-motion": "7.6.1",
         "graphql": "16.6.0",
         "immer": "9.0.15",
-        "next": "12.3.1",
+        "next": "13.0.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "7.39.4",
@@ -47,13 +48,13 @@
         "@graphql-inspector/cli": "3.4.0",
         "@testing-library/react": "13.4.0",
         "@types/jest": "29.2.3",
-        "@types/node": "18.8.2",
-        "@types/react": "18.0.21",
-        "@types/react-dom": "18.0.6",
+        "@types/node": "18.11.10",
+        "@types/react": "18.0.25",
+        "@types/react-dom": "18.0.9",
         "@types/validator": "13.7.10",
-        "@typescript-eslint/eslint-plugin": "5.40.0",
-        "eslint": "8.25.0",
-        "eslint-config-next": "12.3.1",
+        "@typescript-eslint/eslint-plugin": "5.45.0",
+        "eslint": "8.28.0",
+        "eslint-config-next": "13.0.6",
         "eslint-plugin-jest": "27.1.5",
         "eslint-plugin-promise": "6.1.1",
         "eslint-plugin-react": "7.31.11",
