--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
     "private": true,
     "scripts": {
         "prepare": "husky install",
+        "lint": "eslint app source",
+        "typecheck": "tsc --noEmit",
+        "staticcheck": "npm run lint && npm run typecheck",
+        "test": "jest",
+        "check": "npm run staticcheck && npm run test",
         "introspect:staging": "SUBGRAPH_API_ENDPOINT=$(grep SUBGRAPH_API_ENDPOINT .env.development | cut -d '=' -f2) && mkdir -p ./source/subgraph && graphql-inspector introspect $SUBGRAPH_API_ENDPOINT --write ./source/subgraph/schema.json",
         "generate-types": "graphql-codegen",
         "prepare:staging": "npm run introspect:staging && npm run generate-types",
         "watch:staging": "npm run prepare:staging -- -- --watch",
         "develop": "npm run watch:staging & next dev",
-        "build": "next build",
-        "export": "next export",
-        "start": "next start",
-        "lint": "eslint app source",
-        "typecheck": "tsc --noEmit",
-        "staticcheck": "npm run lint && npm run typecheck",
-        "test": "jest",
-        "check": "npm run staticcheck && npm run test"
+        "build:production": "next build",
+        "start:production": "npm run build:production && next start",
+        "export:production": "next export"
     },
     "dependencies": {
         "@apollo/client": "3.7.1",
-        "@emotion/react": "11.10.4",
-        "@emotion/styled": "11.10.4",
-        "@fontsource/public-sans": "^4.5.11",
+        "@emotion/react": "11.10.5",
+        "@emotion/styled": "11.10.5",
+        "@fontsource/public-sans": "4.5.11",
         "@hookform/resolvers": "2.9.10",
         "@mui/icons-material": "5.10.14",
         "@mui/joy": "5.0.0-alpha.54",
