Add Appearance 3-way segmented control
-> Replace "Dark mode" switch with an "Appearance" 3-way segmented control with `light`, `system`, and `dark` options

+ Add new `SegmentedControl` component

+ Set default appearance to `system`

+ Bump @mui/joy and @mui/icons-material

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -80,7 +80,7 @@
                 "selector": ["objectLiteralProperty"],
                 "format": null,
                 "filter": {
-                    "regex": "^&:.*",
+                    "regex": "(^&:.*|aria-label)",
                     "match": true
                 }
             },
