--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
         "prepare": "husky install",
         "lint": "eslint app source",
         "typecheck": "tsc --noEmit",
-        "staticcheck": "npm run lint && npm run typecheck",
-        "test": "jest",
-        "check": "npm run staticcheck && npm run test",
         "introspect:staging": "SUBGRAPH_API_ENDPOINT=$(grep SUBGRAPH_API_ENDPOINT .env.development | cut -d '=' -f2) && mkdir -p ./source/subgraph && graphql-inspector introspect $SUBGRAPH_API_ENDPOINT --write ./source/subgraph/schema.json",
         "generate-types": "graphql-codegen",
         "prepare:staging": "npm run introspect:staging && npm run generate-types",
         "watch:staging": "npm run prepare:staging -- -- --watch",
+        "staticcheck": "npm run prepare:staging && npm run lint && npm run typecheck",
+        "test": "jest",
+        "check": "npm run staticcheck && npm run test",
         "develop": "trap 'kill $PID; exit' INT && npm run watch:staging & BGPID=$! && next dev",
         "build:production": "next build",
         "start:production": "npm run build:production && next start",
