Add playwright end-to-end tests
-> Add tests for navigation and settings panel

+ Bump next & mui versions

+ Update README

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "prepare:staging": "npm run introspect:staging && npm run generate-types",
         "watch:staging": "npm run prepare:staging -- -- --watch",
         "staticcheck": "npm run prepare:staging && npm run lint && npm run typecheck",
-        "test": "jest",
+        "test:unit": "jest",
+        "test:end-to-end": "playwright test",
+        "test": "npm run test:unit && npm run test:end-to-end",
         "check": "npm run staticcheck && npm run test",
-        "develop": "trap 'kill $PID; exit' INT && npm run watch:staging & BGPID=$! && next dev",
+        "start:development": "trap 'kill $PID; exit' INT && npm run watch:staging & BGPID=$! && next dev",
         "build:production": "next build",
         "start:production": "npm run build:production && next start",
         "export:production": "next export"
@@ -24,15 +26,15 @@
         "@emotion/styled": "11.10.5",
         "@fontsource/public-sans": "4.5.11",
         "@hookform/resolvers": "2.9.10",
-        "@mui/icons-material": "5.10.16",
-        "@mui/joy": "5.0.0-alpha.56",
+        "@mui/icons-material": "5.11.0",
+        "@mui/joy": "5.0.0-alpha.58",
         "@tanstack/react-query": "4.14.6",
         "axios": "1.1.3",
         "ethers": "5.7.2",
         "framer-motion": "7.6.1",
         "graphql": "16.6.0",
         "immer": "9.0.15",
-        "next": "13.0.6",
+        "next": "13.0.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "7.39.4",
@@ -47,6 +49,7 @@
         "@graphql-codegen/introspection": "2.2.1",
         "@graphql-eslint/eslint-plugin": "3.13.1",
         "@graphql-inspector/cli": "3.4.0",
+        "@playwright/test": "1.28.1",
         "@testing-library/react": "13.4.0",
         "@types/jest": "29.2.3",
         "@types/node": "18.11.10",
@@ -55,7 +58,7 @@
         "@types/validator": "13.7.10",
         "@typescript-eslint/eslint-plugin": "5.45.0",
         "eslint": "8.28.0",
-        "eslint-config-next": "13.0.6",
+        "eslint-config-next": "13.0.7",
         "eslint-plugin-jest": "27.1.5",
         "eslint-plugin-promise": "6.1.1",
         "eslint-plugin-react": "7.31.11",
