--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -88,7 +88,8 @@
                 "jest/valid-title": [
                     "error",
                     { "ignoreTypeOfDescribeName": true }
-                ]
+                ],
+                "testing-library/prefer-screen-queries": "off"
             }
         },
         {
