--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Test
 on:
     push:
         branches: [main]
@@ -9,17 +9,20 @@ jobs:
         timeout-minutes: 60
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
+            - name: Checkout repository
+              uses: actions/checkout@v3
+            - name: Set up Node
+              uses: actions/setup-node@v3
               with:
                   node-version: 16
             - name: Install dependencies
               run: npm ci
-            - name: Install Playwright Browsers
+            - name: Install Playwright browsers
               run: npx playwright install --with-deps
-            - name: Run Playwright tests
-              run: npx playwright test
-            - uses: actions/upload-artifact@v3
+            - name: Run all checks
+              run: npm run check
+            - name: Save Playwright report
+              uses: actions/upload-artifact@v3
               if: always()
               with:
                   name: playwright-report
